--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,7 @@
     <!-- hook type="after_plugin_install" src="scripts/after_install.js" / -->
     <!-- hook type="before_plugin_uninstall" src="scripts/before_uninstall.js" / -->
 
-    <dependency id="cordova-plugin-file" url="https://github.com/apache/cordova-plugin-file.git" version=">=6.0.2" />
+    <dependency id="cordova-plugin-file" version=">=6.0.2" />
 
     <engines>
         <engine name="cordova-ios" version=">=4.1.0" />
